--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@rails/ujs": "^6.0.0",
     "@rails/webpacker": "4.3.0",
     "jquery": "3.3.1",
+    "stimulus": "^1.1.1",
     "tailwindcss": "^1.9.2",
     "turbolinks": "^5.2.0"
   },
